--- a/.env
+++ b/.env
@@ -8,5 +8,4 @@ MINIO_SECRET_KEY="zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG"
 MINIO_BUCKET_NAME="bucket-s3-rest"
 MINIO_LOCATION="us-east-1"
 MINIO_USE_SSL="true"
-
-MINIO_STORAGE="MONUMENT_MINIO"
+MINIO_STORAGE="FORTRESS"
